2008-02-25  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c
	(_gdk_quartz_events_trigger_crossing_events): Fix build on tiger.

2008-02-24  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzWindow.c: Prevent hidden windows from being
	shown without gdk's control when clicking the dock icon.

2008-02-24  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkprivate-quartz.h:
	* gdk/quartz/gdkeventloop-quartz.c: (got_fd_activity), (poll_func):
	Use the subtype field for the custom event that is used to wake up
	the mainloop so we can have other custom event types.

	* gdk/quartz/gdkevents-quartz.c:
	(_gdk_quartz_events_trigger_crossing_events):
	* gdk/quartz/gdkwindow-quartz.c: (show_window_internal): Create
	crossing events after showing a window if necessary, to work
	around problems with the tracking rect API.

2008-02-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* demos/gtk-demo/printing.c (do_printing): gtk-demo printing gives 
	wrong results on win32 because it doesn't set the printing units, 
	which affect the transformation of the cairo context 
	(#347125, Erik van Pienbroek)
	
2008-02-22  Tor Lillqvist  <tml@novell.com>

	* tests/pixbuf-init.c: Add file missing from SVN, from the tarball.

2008-02-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* gdk-pixbuf/queryloaders.c (loader_sanity_check): It's perfectly acceptable
	for a module to only support the save_to_callback() method if it marks itself
	as WRITABLE
	
2008-02-16  Matthias Clasen  <mclasen@redhat.com>
	
	* configure.in: Bump version

2008-02-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.0 ===

	* Makefile.decl: Start Xvfb at depth 16 so cairo doesn't choke.

2008-02-21  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkfilechooserdefault.c (list_mtime_data_func) [Win32]: Must
	pass the format string to strftime in the C library's locale's
	charset, not the system's. Correspondingly, the return value from